fix: form label align theme

--- a/src/styles/expose.less
+++ b/src/styles/expose.less
@@ -149,6 +149,9 @@
     &-tip {
       color: @form-tip-color;
     }
+    &-label {
+      text-align: @form-item-label-align;
+    }
   }
   .loop-gray(9);
   &-button {
